test/Fail/PolarityDatatypeIndex.err
PolarityDatatypeIndex.agda:10.6-17: error: [DatatypeIndexPolarity]
Cannot annotate datatype indices with polarity other than @mixed
